# TelegramBotTicket

./: .env.microservices.template  .env.template  .gcloudignore  .gitignore  CICD_SETUP.md  MICROSERVICES.md  ML_INTEGRATION.md  README.md  cloudbuild.yaml  collecting_bot.py  config.py  debug_chat_id_bot.py  docker-compose.microservices.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  google_sheets_client.py  main_collecting.py  ops_parser.py  pyproject.toml  requirements.txt  s3_uploader.py
.github/workflows/: ci.yml  deploy.yml
mlflow/: Dockerfile  Dockerfile.simple  README.md  cloudbuild.yaml  docker-compose.yml  entrypoint.sh  nginx.conf  start.sh
models/v1/: label_encoder.pkl  metadata.json  preprocessor.pkl  tfidf_vectorizer.pkl
monitoring/: prometheus.yml
monitoring/loki/: loki-config.yml
monitoring/promtail/: promtail-config.yml
scripts/: __init__.py  batch_predict.py  deploy.sh  fix_ml_tracking_columns.py  retrain.py  run_all.py  run_collecting.py  run_reporting.py  sync_training_data.py  test_features.sh
services/admin/: Dockerfile  main.py  requirements.txt
services/collector/: Dockerfile  main.py
services/data/: Dockerfile  main.py  requirements.txt
services/gateway/: nginx.conf
services/prediction/: Dockerfile  main.py  requirements.txt
services/shared/: __init__.py  config.py  models.py  preprocessing.py  telegram_alerter.py
services/training/: Dockerfile  main.py  requirements.txt
src/: __init__.py
src/bots/: __init__.py  admin.py  collector.py  parsers.py  sla.py
src/core/: __init__.py  config.py
(+21 files in other folders)
