[project]
name = "telegram-bot-mytech"
version = "2.0.0"
description = "Telegram Bot MyTech — IT Support Ticket Classification"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["services"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "E402",  # module level import not at top (needed for path hacks)
  "F401",  # unused imports in __init__.py
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
